Loose panel was bugged on mobile, wrong dimensions

--- a/css/style.css
+++ b/css/style.css
@@ -97,6 +97,12 @@ body {
   margin: auto;
   border: 3px solid #252525;
 }
+@media (max-width: 480px) {
+  .loose_banner {
+    width: 90vmin;
+    height: 70vmin;
+  }
+}
 .loose_banner__messages p {
   font-weight: 600;
   font-size: 1.2rem;
