--- a/sass/componentes/_loose_banner.scss
+++ b/sass/componentes/_loose_banner.scss
@@ -13,6 +13,11 @@
     inset: 0 0 0 0;
     margin: auto;
     border: 3px solid c.$black;
+    
+    @media (max-width:mq.$mobile){
+        width: 90vmin;
+        height: 70vmin;
+    }
     &__messages{
         p{
             font-weight: 600;
